<resources>
    <string name="app_name">Workout</string>
    <string name="title_tracker">Training Tracker</string>
    <string name="title_news">Sport News</string>
    <string name="title_history">Training History</string>
    <string name="title_scheduler">Training Scheduler</string>

    <string name="api_key">2ac966fbd7a1469085414bf3f663a8e1</string>
    <string name="cycling_btn">cycling_btn</string>
    <string name="running_btn">running_btn</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="compass_img">compass_img</string>
    <string name="anonim">anonim</string>
    <string name="delete">Delete</string>
    <string name="name">Name</string>
    <string name="hour">Hour</string>
    <string name="update">Update</string>
    <string name="add">Add</string>
    <string name="minute">Minute</string>
    <string name="auto_start">Auto Start</string>
    <string name="cycling">Cycling</string>
    <string name="running">Running</string>
    <string name="_00_00_00">00:00:00</string>

    <string name ="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyApnroja2qRDPloVlijx15P8MSuna7hCnI</string>
    <string name="space1">space1</string>
    <string name="space2">space2</string>
</resources>